--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/blog-api
+spring.datasource.url=jdbc:postgresql://localhost:5432/dblog-api
 spring.datasource.username=postgres
 spring.datasource.password=123456789
 spring.jpa.hibernate.ddl-auto=update
